--- a/style.css
+++ b/style.css
@@ -6,8 +6,32 @@ body {
     color: #fff;
 }
 
-#slider {
+.slider-cover {
+    --slides-count: 2;
+
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+}
+.slider {
     margin-bottom: 30px;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row nowrap;
+    scroll-snap-type: x mandatory;
+}
+.slide {
+    flex: 1 1 46vw;
+    min-width: calc(46vw - 24px);
+    outline: 2px solid rgba(230, 230, 230, 0.5);
+    outline-offset: -3px;
+    padding: 6px 12px;
+    scroll-snap-align: start end;
+}
+.slide__name .data {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 #slider-btns {
@@ -23,6 +47,11 @@ body {
     border: 1px solid #fff;
     margin-bottom: 7px;
 }
+#slider-btns .active {
+    background: rgba(120, 120, 120, 1);
+}
+
+
 
 #anim {
     max-width: 50%;
